[package]
name = "spacefn-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "*"
dbus-crossroads = "*"
epoll = "^4.3.1"
evdev = "^0.11.4"
nix = "^0.23.1"
serde = "^1.0.136"
serde_derive = "^1.0.136"
toml = "^0.5.8"
xdg = "^2.4.1"
