[package]
name = "tokey"
version = "0.1.0"
authors = ["Damian Geerdes (chronotab)"]
edition = "2021"
description = "Reimplementation of spacefn in rust with dbus messaging"
repository = "https://github.com/chronotab/tokey"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "*"
dbus-crossroads = "*"
evdev = "^0.11.4"
nix = "^0.23.1"
serde = "^1.0.136"
serde_derive = "^1.0.136"
toml = "^0.5.8"
xdg = "^2.4.1"
