[package]
name = "tokey"
version = "0.2.0"
authors = ["Damian Geerdes (chronotab)"]
edition = "2021"
description = "Reimplementation of spacefn in rust with dbus messaging"
repository = "https://github.com/chronotab/tokey"
license = "WTFPL"

[dependencies]
dbus = "*"
dbus-crossroads = "*"
evdev = "^0.11.4"
nix = "^0.23.1"
serde = "^1.0.136"
serde_derive = "^1.0.136"
toml = "^0.5.8"
xdg = "^2.4.1"

[features]
default = ["tokey_ipc"]
tokey_ipc = []